# anywhere

./: README.md  pyproject.toml
anywhere/: action.py  chat_content_widget.py  chat_history_widget.py  chat_window.py  config_window.py  hotkey.py  main.py  markdown_convert.py  utils.py  widgets.py
anywhere/chat/: chat_content_widget.py  chat_window.py
anywhere/resources/css/: code.css
