[tool.poetry]
name = "anywhere"
version = "0.1.0"
description = ""
authors = ["LiaoKong <568250549@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pyside2 = { version = "^5.15.2.1", python = "3.8" }
qtawesome = { version = "^1.2.3", python = "3.8" }
requests = { version = "^2.31.0", python = "3.8" }
openai = "^0.27.8"
markdown = "^3.4.4"
pygments = "^2.16.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
